Fix tooltip (#121)
* Minor clean up of EventTooltip.js

* Fix root cause of #47 and improve tooltip styling

Tooltips would go offscreen because of the way `top` is defined. This
commit fixes that root cause by changing CanvasPage to position fixed so
that tooltips will be positioned relative to the DOM rather than the
CanvasPage div.

Undoes some of the changes made in #78 as this commit fixes the root
cause of the bug.

* Disable component name truncation

Although this was Brian's recommendation (see #67), I don't think
component names will be very long because the source code for those will
be really annoying.

* Set mouse location on every interaction to fix #87

* Introduce 768-char component name length limit

Covers the unlikely edge case that a component name is unreasonably
long.

--- a/src/CanvasPage.css
+++ b/src/CanvasPage.css
@@ -4,5 +4,4 @@
   bottom: 0.5rem;
   left: 0.5rem;
   right: 0.5rem;
-  overflow: hidden;
 }
